<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="101dp">

        <TextView
            android:id="@+id/txtSelectItem"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_bg"
            android:hint="@string/seleccion_hora"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarioView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_bg"
            android:hint="@string/description"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSelectItem"
            app:layout_constraintVertical_bias="0.0" />

        <CalendarView
            android:id="@+id/calendarioView"
            android:layout_width="350dp"
            android:layout_height="294dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.073" />

        <Button
            android:id="@+id/btn_booking"
            android:layout_width="321dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?attr/colorOnSurface"
            android:drawableTint="@color/blue"
            android:text="@string/book"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabTurno"
            app:layout_constraintVertical_bias="0.0" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabSite"
            android:layout_width="315dp"
            android:layout_height="36dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            app:layout_constraintVertical_bias="0.079"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="fill"
            app:tabIndicatorColor="?attr/colorOnSurface"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="?attr/colorOnSurface">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabTurno"
            android:layout_width="315dp"
            android:layout_height="36dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabSite"
            app:layout_constraintVertical_bias="0.052"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="fill"
            app:tabIndicatorColor="?attr/colorOnSurface"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="?attr/colorOnSurface">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>